hphp/test/slow/nullsafe/nullsafe-prop-14.php.expectf
Fatal error: ?-> can only be used with scalar property names in %s/test/slow/nullsafe/nullsafe-prop-14.php on line 6
